packages/asl/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asl-dev-app
  labels:
    name: asl-dev-app
    role: service
spec:
  ports:
  - name: http
    port: 10080
  - name: https
    port: 10443
  selector:
    name: asl-dev-app
