packages/asl/deploy/network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: permit-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - port: 10080
      protocol: TCP
    - port: 10443
      protocol: TCP
  podSelector:
    matchLabels:
      name: asl-dev-app
  policyTypes:
  - Ingress
